<resources>
    <string name="app_name">LDM_Evaluacion1_HC98I04001</string>
    <string name="btnNE">NUEVO ESTUDIANTE</string>
    <string name="btnLE">LISTA DE ESTUDIANTES</string>
    <string name="btnMD">MIS DATOS</string>
    <string name="lblNombre">Nombre:</string>
    <string name="lblCodigo">Código:</string>
    <string name="lblMateria">Materia:</string>
    <string name="lblPP">Primer Parcial:</string>
    <string name="lblSP">Segundo Parcial:</string>
    <string name="lblTP">Tercer Parcial:</string>
    <string name="btnGuardar">Guardar</string>
    //Activity Mostrar Datos
    <string name="txtMostrarDatos">Datos del Estudiante:</string>
    <string name="txtNombre">Nombre:Janet Carolina Huezo Castaneda</string>
    <string name="txtCodigo">Código: HC98-I04-001</string>
</resources>